tests/chapter_17/invalid_types/scalar_expressions/void_condition_do_loop.c
void f(void) { return; }
int main(void) {
  int i = 0;
  do {
    i = i + 1;
  } while (f());
  return 0;
}